[gd_scene load_steps=10 format=3 uid="uid://cdxmjhk62d375"]

[ext_resource type="PackedScene" uid="uid://exlr3rc2yjr8" path="res://Game Levels/game_level.tscn" id="1_icjkj"]
[ext_resource type="Script" path="res://main.gd" id="1_km2ud"]
[ext_resource type="PackedScene" uid="uid://5gw1g6k3e868" path="res://Game Levels/main_menu.tscn" id="2_amaai"]
[ext_resource type="Script" path="res://Camera2D.gd" id="2_m2fl6"]
[ext_resource type="Script" path="res://global.gd" id="2_vxrnu"]
[ext_resource type="PackedScene" uid="uid://ut277gcae5a5" path="res://Game Levels/computer.tscn" id="3_xfoyc"]
[ext_resource type="AudioStream" uid="uid://ky8q2fnr1qoj" path="res://Sound/BGMSchool.wav" id="6_6wbj7"]
[ext_resource type="AudioStream" uid="uid://bent2321bfmdd" path="res://Sound/BGMCardinal.mp3" id="7_n5vyh"]
[ext_resource type="AudioStream" uid="uid://7lr76hkv4o7r" path="res://Sound/BGMUpbeat.wav" id="8_0hru7"]

[node name="Main" type="Node"]
script = ExtResource("1_km2ud")

[node name="Global" type="Node" parent="."]
script = ExtResource("2_vxrnu")

[node name="PackageDropoff" type="Marker2D" parent="Global"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 240)
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 480
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("2_m2fl6")

[node name="GameLevel" parent="." instance=ExtResource("1_icjkj")]

[node name="Computer" parent="." instance=ExtResource("3_xfoyc")]
offset_left = 1080.0
offset_right = 1080.0

[node name="Main Menu" parent="." instance=ExtResource("2_amaai")]
offset_left = -270.0
offset_top = -180.0
offset_right = 270.0
offset_bottom = 180.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6wbj7")
autoplay = true

[node name="BGM2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_n5vyh")
autoplay = true

[node name="BGM3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0hru7")
autoplay = true

[connection signal="finished" from="BGM" to="." method="_on_bgm_finished"]
[connection signal="finished" from="BGM2" to="." method="_on_bgm_2_finished"]
[connection signal="finished" from="BGM3" to="." method="_on_bgm_3_finished"]
